--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,27 +19,27 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./python_scripts:/python_scripts
-  db:
-    image: postgres
-    restart: always
-    ports:
-      - "4444:5432"
-    environment:
-      POSTGRES_PASSWORD: example
-  mongo_db:
-    image: mongo:latest
-    container_name: "mongodb"
-    environment:
-      - MONGO_DATA_DIR=/data/db
-      - MONGO_LOG_DIR=/dev/null
-      - MONGO_INITDB_DATABASE=db
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=admin
-    volumes:
-      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo-js:ro
-      - ./mongo-volumen:/data/db
-    ports:
-      - '27017-27019:27017-27019'
+  # db:
+  #   image: postgres
+  #   restart: always
+  #   ports:
+  #     - "4444:5432"
+  #   environment:
+  #     POSTGRES_PASSWORD: example
+  # mongo_db:
+  #   image: mongo:latest
+  #   container_name: "mongodb"
+  #   environment:
+  #     - MONGO_DATA_DIR=/data/db
+  #     - MONGO_LOG_DIR=/dev/null
+  #     - MONGO_INITDB_DATABASE=db
+  #     - MONGO_INITDB_ROOT_USERNAME=admin
+  #     - MONGO_INITDB_ROOT_PASSWORD=admin
+  #   volumes:
+  #     - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo-js:ro
+  #     - ./mongo-volumen:/data/db
+  #   ports:
+  #     - '27017-27019:27017-27019'
   spark-all:
     image: jupyter/all-spark-notebook:latest
     container_name: "spark-enviroment"
